--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://neondb_owner:npg_FJ9gjVQcsOE7@ep-withered-water-a2k6antb-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL="postgresql://neondb_owner:npg_FJ9gjVQcsOE7@ep-withered-water-a2k6antb-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
