--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint",
     "test": "vitest",
     "test:e2e": "playwright test",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "prisma db seed"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.14.0",
     "@tanstack/react-query": "^5.85.5",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.2",
@@ -33,9 +34,13 @@
     "eslint-config-next": "14.2.3",
     "playwright": "^1.43.0",
     "postcss": "^8.4.35",
-    "prisma": "^5.22.0",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.5",
     "typescript": "5.4.2",
     "vitest": "^1.5.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
